# agent-hack

./: .gitignore  README.md  config.yaml  pyproject.toml
.linux-agent/backups/2e1cb931-7cea-4626-bea3-d6ab0aab5ca8/: manifest.json
.linux-agent/backups/428cd9f3-b9fd-45ca-95fd-6ced48420919/: manifest.json
.linux-agent/backups/probe-overwrite-create/: manifest.json
docs/: langgraph_linux_agent_design.md  phase1_detailed_tasks.md  phase2_phase3_detailed_tasks.md  phase4_detailed_tasks.md  phase4_manual_acceptance.md
src/linux_agent/: __init__.py  __main__.py  app.py  approval_ui.py  audit.py  config.py  graph.py  policy.py  run_store.py  state.py  web.py  web_runtime.py
src/linux_agent/skills/: __init__.py  filesystem.py  search.py  shell.py  write.py
src/linux_agent/web_static/: app.js  index.html  styles.css
tests/: __init__.py  test_graph.py  test_llm_config.py  test_t16_app.py  test_t17_integration.py  test_t18_t20.py  test_t26_t27.py  test_t28_t29.py  test_t30_t32.py  test_t36.py  test_t37_t40.py  test_t38_t39.py  test_t5_t8.py  test_web.py
